; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_http.c_HttpProtocol_on_error.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/urlmon/extr_http.c_HttpProtocol_on_error.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_7__ = type { i32 }

@.str = private unnamed_addr constant [9 x i8] c"(%p) %d\0A\00", align 1
@FLAG_FIRST_CONTINUE_COMPLETE = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [23 x i8] c"Not handling error %d\0A\00", align 1
@RPC_E_RETRY = common dso_local global i32 0, align 4
@ERROR_IO_PENDING = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_7__*, i32)* @HttpProtocol_on_error to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @HttpProtocol_on_error(%struct.TYPE_7__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_7__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %8 = call i32* @impl_from_Protocol(%struct.TYPE_7__* %7)
  store i32* %8, i32** %5, align 8
  %9 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %10 = load i32, i32* %4, align 4
  %11 = call i32 @TRACE(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str, i64 0, i64 0), %struct.TYPE_7__* %9, i32 %10)
  %12 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %13 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = load i32, i32* @FLAG_FIRST_CONTINUE_COMPLETE, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %21

18:                                               ; preds = %2
  %19 = load i32, i32* %4, align 4
  %20 = call i32 @FIXME(i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.1, i64 0, i64 0), i32 %19)
  br label %46

21:                                               ; preds = %2
  br label %22

22:                                               ; preds = %39, %21
  %23 = load i32*, i32** %5, align 8
  %24 = load i32, i32* %4, align 4
  %25 = call i32 @handle_http_error(i32* %23, i32 %24)
  store i32 %25, i32* %6, align 4
  %26 = load i32, i32* @RPC_E_RETRY, align 4
  %27 = icmp eq i32 %25, %26
  br i1 %27, label %28, label %40

28:                                               ; preds = %22
  %29 = load i32*, i32** %5, align 8
  %30 = call i32 @send_http_request(i32* %29)
  store i32 %30, i32* %4, align 4
  %31 = load i32, i32* %4, align 4
  %32 = load i32, i32* @ERROR_IO_PENDING, align 4
  %33 = icmp eq i32 %31, %32
  br i1 %33, label %38, label %34

34:                                               ; preds = %28
  %35 = load i32, i32* %4, align 4
  %36 = load i32, i32* @ERROR_SUCCESS, align 4
  %37 = icmp eq i32 %35, %36
  br i1 %37, label %38, label %39

38:                                               ; preds = %34, %28
  br label %46

39:                                               ; preds = %34
  br label %22

40:                                               ; preds = %22
  %41 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %42 = load i32, i32* %6, align 4
  %43 = call i32 @protocol_abort(%struct.TYPE_7__* %41, i32 %42)
  %44 = load %struct.TYPE_7__*, %struct.TYPE_7__** %3, align 8
  %45 = call i32 @protocol_close_connection(%struct.TYPE_7__* %44)
  br label %46

46:                                               ; preds = %40, %38, %18
  ret void
}

declare dso_local i32* @impl_from_Protocol(%struct.TYPE_7__*) #1

declare dso_local i32 @TRACE(i8*, %struct.TYPE_7__*, i32) #1

declare dso_local i32 @FIXME(i8*, i32) #1

declare dso_local i32 @handle_http_error(i32*, i32) #1

declare dso_local i32 @send_http_request(i32*) #1

declare dso_local i32 @protocol_abort(%struct.TYPE_7__*, i32) #1

declare dso_local i32 @protocol_close_connection(%struct.TYPE_7__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
